--- a/teste-de-unidade/.classpath
+++ b/teste-de-unidade/.classpath
@@ -7,7 +7,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="/home/tls/Downloads/hamcrest-all-1.3.jar"/>
+	<classpathentry kind="lib" path="Lib/hamcrest-all-1.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
